// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors utilities getCSSColors should generate a CSS colors from a Colors object 1`] = `
Object {
  "colorIntents": Object {
    "accessibilityColor": "var(--c-prim-500)",
    "background0": "var(--c-grey-0)",
    "background1": "var(--c-grey-25)",
    "background2": "var(--c-grey-50)",
    "backgroundDisabled": "var(--c-grey-100)",
    "current": "var(--c-current)",
    "dangerAction": "var(--c-util-red-500)",
    "dangerBackground": "var(--c-util-red-100)",
    "dangerText": "var(--c-util-red-900)",
    "disabledText": "var(--c-grey-400)",
    "disabledTextReversed": "var(--c-grey-100)",
    "primary": "var(--c-prim-500)",
    "primaryReversed": "var(--c-grey-0-reversed)",
    "primaryText": "var(--c-grey-1000)",
    "primaryTextReversed": "var(--c-grey-0-reversed)",
    "secondary": "var(--c-acc1-500)",
    "secondaryReversed": "var(--c-grey-0-reversed)",
    "secondaryText": "var(--c-grey-700)",
    "secondaryTextReversed": "var(--c-grey-0-reversed)",
    "successAction": "var(--c-util-green-500)",
    "successBackground": "var(--c-util-green-100)",
    "successText": "var(--c-util-green-900)",
    "tertiaryText": "var(--c-grey-500)",
    "tertiaryTextReversed": "var(--c-grey-0-reversed)",
    "transparent": "var(--c-transparent)",
    "warningAction": "var(--c-util-yellow-500)",
    "warningBackground": "var(--c-util-yellow-100)",
    "warningText": "var(--c-util-yellow-900)",
  },
  "colors": Object {
    "accent1": Object {
      "100": "hsl(var(--c-acc1-base-hue) var(--c-acc1-base-sat) 78% / 100%)",
      "300": "hsl(var(--c-acc1-base-hue) var(--c-acc1-base-sat) 64% / 100%)",
      "500": "hsl(var(--c-acc1-base-hue) var(--c-acc1-base-sat) 50% / 100%)",
      "700": "hsl(var(--c-acc1-base-hue) var(--c-acc1-base-sat) 36% / 100%)",
      "900": "hsl(var(--c-acc1-base-hue) var(--c-acc1-base-sat) 22% / 100%)",
      "baseHue": "200",
      "baseSat": "50%",
    },
    "accent2": Object {
      "100": "hsl(var(--c-acc2-base-hue) var(--c-acc2-base-sat) 78% / 100%)",
      "300": "hsl(var(--c-acc2-base-hue) var(--c-acc2-base-sat) 64% / 100%)",
      "500": "hsl(var(--c-acc2-base-hue) var(--c-acc2-base-sat) 50% / 100%)",
      "700": "hsl(var(--c-acc2-base-hue) var(--c-acc2-base-sat) 36% / 100%)",
      "900": "hsl(var(--c-acc2-base-hue) var(--c-acc2-base-sat) 22% / 100%)",
      "baseHue": "200",
      "baseSat": "50%",
    },
    "accent3": Object {
      "100": "hsl(var(--c-acc3-base-hue) var(--c-acc3-base-sat) 78% / 100%)",
      "300": "hsl(var(--c-acc3-base-hue) var(--c-acc3-base-sat) 64% / 100%)",
      "500": "hsl(var(--c-acc3-base-hue) var(--c-acc3-base-sat) 50% / 100%)",
      "700": "hsl(var(--c-acc3-base-hue) var(--c-acc3-base-sat) 36% / 100%)",
      "900": "hsl(var(--c-acc3-base-hue) var(--c-acc3-base-sat) 22% / 100%)",
      "baseHue": "200",
      "baseSat": "50%",
    },
    "current": "currentColor",
    "effectTransparentHeavy": "hsl(0deg 0% 0% / 13%)",
    "effectTransparentLight": "hsl(0deg 0% 0% / 10%)",
    "effectTransparentMedium": "hsl(0deg 0% 0% / 10%)",
    "grey": Object {
      "0": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 100% / 100%)",
      "0-reversed": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 100% / 100%)",
      "100": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 90% / 100%)",
      "100-reversed": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 0% / 100%)",
      "1000": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 7% / 100%)",
      "200": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 86% / 100%)",
      "200-reversed": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 0% / 100%)",
      "25": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 97% / 100%)",
      "300": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 83% / 100%)",
      "400": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 73% / 100%)",
      "50": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 93% / 100%)",
      "500": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 66% / 100%)",
      "600": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 59% / 100%)",
      "700": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 46% / 100%)",
      "800": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 26% / 100%)",
      "900": "hsl(var(--c-grey-base-hue) var(--c-grey-base-sat) 13% / 100%)",
      "baseHue": "10",
      "baseSat": "6%",
    },
    "primary": Object {
      "100": "hsl(var(--c-prim-base-hue) var(--c-prim-base-sat) 78% / 100%)",
      "300": "hsl(var(--c-prim-base-hue) var(--c-prim-base-sat) 64% / 100%)",
      "500": "hsl(var(--c-prim-base-hue) var(--c-prim-base-sat) 50% / 100%)",
      "700": "hsl(var(--c-prim-base-hue) var(--c-prim-base-sat) 36% / 100%)",
      "900": "hsl(var(--c-prim-base-hue) var(--c-prim-base-sat) 22% / 100%)",
      "baseHue": "222",
      "baseSat": "50%",
    },
    "transparent": "hsl(0deg 0% 0% / 0%)",
    "utilityGreen": Object {
      "100": "hsl(var(--c-util-green-base-hue) var(--c-util-green-base-sat) 87% / 100%)",
      "300": "hsl(var(--c-util-green-base-hue) var(--c-util-green-base-sat) 70% / 100%)",
      "500": "hsl(var(--c-util-green-base-hue) var(--c-util-green-base-sat) 53% / 100%)",
      "700": "hsl(var(--c-util-green-base-hue) var(--c-util-green-base-sat) 36% / 100%)",
      "900": "hsl(var(--c-util-green-base-hue) var(--c-util-green-base-sat) 19% / 100%)",
      "baseHue": "112",
      "baseSat": "71%",
    },
    "utilityRed": Object {
      "100": "hsl(var(--c-util-red-base-hue) var(--c-util-red-base-sat) 82% / 100%)",
      "300": "hsl(var(--c-util-red-base-hue) var(--c-util-red-base-sat) 65% / 100%)",
      "500": "hsl(var(--c-util-red-base-hue) var(--c-util-red-base-sat) 48% / 100%)",
      "700": "hsl(var(--c-util-red-base-hue) var(--c-util-red-base-sat) 31% / 100%)",
      "900": "hsl(var(--c-util-red-base-hue) var(--c-util-red-base-sat) 14% / 100%)",
      "baseHue": "360",
      "baseSat": "84%",
    },
    "utilityYellow": Object {
      "100": "hsl(var(--c-util-yellow-base-hue) var(--c-util-yellow-base-sat) 88% / 100%)",
      "300": "hsl(var(--c-util-yellow-base-hue) var(--c-util-yellow-base-sat) 71% / 100%)",
      "500": "hsl(var(--c-util-yellow-base-hue) var(--c-util-yellow-base-sat) 54% / 100%)",
      "700": "hsl(var(--c-util-yellow-base-hue) var(--c-util-yellow-base-sat) 37% / 100%)",
      "900": "hsl(var(--c-util-yellow-base-hue) var(--c-util-yellow-base-sat) 20% / 100%)",
      "baseHue": "47",
      "baseSat": "90%",
    },
  },
  "gradients": Object {
    "gradient1": "linear-gradient(45deg, hsl(200deg 50% 78% / 100%) ,hsl(200deg 50% 50% / 100%) 100)",
    "gradient2": "linear-gradient(45deg, hsl(200deg 50% 78% / 100%) ,hsl(200deg 50% 50% / 100%) 100)",
    "gradient3": "linear-gradient(45deg, hsl(200deg 50% 78% / 100%) ,hsl(200deg 50% 50% / 100%) 100)",
  },
  "var": Object {
    "colorIntents": Object {
      "accessibilityColor": "var(--ci-accessibility-color)",
      "background0": "var(--ci-background0)",
      "background1": "var(--ci-background1)",
      "background2": "var(--ci-background2)",
      "backgroundDisabled": "var(--ci-background-disabled)",
      "current": "var(--ci-current)",
      "dangerAction": "var(--ci-danger-action)",
      "dangerBackground": "var(--ci-danger-background)",
      "dangerText": "var(--ci-danger-text)",
      "disabledText": "var(--ci-disabled-text)",
      "disabledTextReversed": "var(--ci-disabled-text-reversed)",
      "primary": "var(--ci-prim)",
      "primaryReversed": "var(--ci-prim-reversed)",
      "primaryText": "var(--ci-prim-text)",
      "primaryTextReversed": "var(--ci-prim-text-reversed)",
      "secondary": "var(--ci-sec)",
      "secondaryReversed": "var(--ci-sec-reversed)",
      "secondaryText": "var(--ci-sec-text)",
      "secondaryTextReversed": "var(--ci-sec-text-reversed)",
      "successAction": "var(--ci-success-action)",
      "successBackground": "var(--ci-success-background)",
      "successText": "var(--ci-success-text)",
      "tertiaryText": "var(--ci-ter-text)",
      "tertiaryTextReversed": "var(--ci-ter-text-reversed)",
      "transparent": "var(--ci-transparent)",
      "warningAction": "var(--ci-warning-action)",
      "warningBackground": "var(--ci-warning-background)",
      "warningText": "var(--ci-warning-text)",
    },
    "colors": Object {
      "accent1": Object {
        "100": "var(--c-acc1-100)",
        "300": "var(--c-acc1-300)",
        "500": "var(--c-acc1-500)",
        "700": "var(--c-acc1-700)",
        "900": "var(--c-acc1-900)",
        "baseHue": "var(--c-acc1-base-hue)",
        "baseSat": "var(--c-acc1-base-sat)",
      },
      "accent2": Object {
        "100": "var(--c-acc2-100)",
        "300": "var(--c-acc2-300)",
        "500": "var(--c-acc2-500)",
        "700": "var(--c-acc2-700)",
        "900": "var(--c-acc2-900)",
        "baseHue": "var(--c-acc2-base-hue)",
        "baseSat": "var(--c-acc2-base-sat)",
      },
      "accent3": Object {
        "100": "var(--c-acc3-100)",
        "300": "var(--c-acc3-300)",
        "500": "var(--c-acc3-500)",
        "700": "var(--c-acc3-700)",
        "900": "var(--c-acc3-900)",
        "baseHue": "var(--c-acc3-base-hue)",
        "baseSat": "var(--c-acc3-base-sat)",
      },
      "current": "var(--c-current)",
      "effectTransparentHeavy": "var(--c-effect-transparent-heavy)",
      "effectTransparentLight": "var(--c-effect-transparent-light)",
      "effectTransparentMedium": "var(--c-effect-transparent-medium)",
      "grey": Object {
        "0": "var(--c-grey-0)",
        "0-reversed": "var(--c-grey-0-reversed)",
        "100": "var(--c-grey-100)",
        "100-reversed": "var(--c-grey-100-reversed)",
        "1000": "var(--c-grey-1000)",
        "200": "var(--c-grey-200)",
        "200-reversed": "var(--c-grey-200-reversed)",
        "25": "var(--c-grey-25)",
        "300": "var(--c-grey-300)",
        "400": "var(--c-grey-400)",
        "50": "var(--c-grey-50)",
        "500": "var(--c-grey-500)",
        "600": "var(--c-grey-600)",
        "700": "var(--c-grey-700)",
        "800": "var(--c-grey-800)",
        "900": "var(--c-grey-900)",
        "baseHue": "var(--c-grey-base-hue)",
        "baseSat": "var(--c-grey-base-sat)",
      },
      "primary": Object {
        "100": "var(--c-prim-100)",
        "300": "var(--c-prim-300)",
        "500": "var(--c-prim-500)",
        "700": "var(--c-prim-700)",
        "900": "var(--c-prim-900)",
        "baseHue": "var(--c-prim-base-hue)",
        "baseSat": "var(--c-prim-base-sat)",
      },
      "transparent": "var(--c-transparent)",
      "utilityGreen": Object {
        "100": "var(--c-util-green-100)",
        "300": "var(--c-util-green-300)",
        "500": "var(--c-util-green-500)",
        "700": "var(--c-util-green-700)",
        "900": "var(--c-util-green-900)",
        "baseHue": "var(--c-util-green-base-hue)",
        "baseSat": "var(--c-util-green-base-sat)",
      },
      "utilityRed": Object {
        "100": "var(--c-util-red-100)",
        "300": "var(--c-util-red-300)",
        "500": "var(--c-util-red-500)",
        "700": "var(--c-util-red-700)",
        "900": "var(--c-util-red-900)",
        "baseHue": "var(--c-util-red-base-hue)",
        "baseSat": "var(--c-util-red-base-sat)",
      },
      "utilityYellow": Object {
        "100": "var(--c-util-yellow-100)",
        "300": "var(--c-util-yellow-300)",
        "500": "var(--c-util-yellow-500)",
        "700": "var(--c-util-yellow-700)",
        "900": "var(--c-util-yellow-900)",
        "baseHue": "var(--c-util-yellow-base-hue)",
        "baseSat": "var(--c-util-yellow-base-sat)",
      },
    },
  },
  "varNames": Object {
    "colorIntents": Object {
      "accessibilityColor": "--ci-accessibility-color",
      "background0": "--ci-background0",
      "background1": "--ci-background1",
      "background2": "--ci-background2",
      "backgroundDisabled": "--ci-background-disabled",
      "current": "--ci-current",
      "dangerAction": "--ci-danger-action",
      "dangerBackground": "--ci-danger-background",
      "dangerText": "--ci-danger-text",
      "disabledText": "--ci-disabled-text",
      "disabledTextReversed": "--ci-disabled-text-reversed",
      "primary": "--ci-prim",
      "primaryReversed": "--ci-prim-reversed",
      "primaryText": "--ci-prim-text",
      "primaryTextReversed": "--ci-prim-text-reversed",
      "secondary": "--ci-sec",
      "secondaryReversed": "--ci-sec-reversed",
      "secondaryText": "--ci-sec-text",
      "secondaryTextReversed": "--ci-sec-text-reversed",
      "successAction": "--ci-success-action",
      "successBackground": "--ci-success-background",
      "successText": "--ci-success-text",
      "tertiaryText": "--ci-ter-text",
      "tertiaryTextReversed": "--ci-ter-text-reversed",
      "transparent": "--ci-transparent",
      "warningAction": "--ci-warning-action",
      "warningBackground": "--ci-warning-background",
      "warningText": "--ci-warning-text",
    },
    "colors": Object {
      "accent1": Object {
        "100": "--c-acc1-100",
        "300": "--c-acc1-300",
        "500": "--c-acc1-500",
        "700": "--c-acc1-700",
        "900": "--c-acc1-900",
        "baseHue": "--c-acc1-base-hue",
        "baseSat": "--c-acc1-base-sat",
      },
      "accent2": Object {
        "100": "--c-acc2-100",
        "300": "--c-acc2-300",
        "500": "--c-acc2-500",
        "700": "--c-acc2-700",
        "900": "--c-acc2-900",
        "baseHue": "--c-acc2-base-hue",
        "baseSat": "--c-acc2-base-sat",
      },
      "accent3": Object {
        "100": "--c-acc3-100",
        "300": "--c-acc3-300",
        "500": "--c-acc3-500",
        "700": "--c-acc3-700",
        "900": "--c-acc3-900",
        "baseHue": "--c-acc3-base-hue",
        "baseSat": "--c-acc3-base-sat",
      },
      "current": "--c-current",
      "effectTransparentHeavy": "--c-effect-transparent-heavy",
      "effectTransparentLight": "--c-effect-transparent-light",
      "effectTransparentMedium": "--c-effect-transparent-medium",
      "grey": Object {
        "0": "--c-grey-0",
        "0-reversed": "--c-grey-0-reversed",
        "100": "--c-grey-100",
        "100-reversed": "--c-grey-100-reversed",
        "1000": "--c-grey-1000",
        "200": "--c-grey-200",
        "200-reversed": "--c-grey-200-reversed",
        "25": "--c-grey-25",
        "300": "--c-grey-300",
        "400": "--c-grey-400",
        "50": "--c-grey-50",
        "500": "--c-grey-500",
        "600": "--c-grey-600",
        "700": "--c-grey-700",
        "800": "--c-grey-800",
        "900": "--c-grey-900",
        "baseHue": "--c-grey-base-hue",
        "baseSat": "--c-grey-base-sat",
      },
      "primary": Object {
        "100": "--c-prim-100",
        "300": "--c-prim-300",
        "500": "--c-prim-500",
        "700": "--c-prim-700",
        "900": "--c-prim-900",
        "baseHue": "--c-prim-base-hue",
        "baseSat": "--c-prim-base-sat",
      },
      "transparent": "--c-transparent",
      "utilityGreen": Object {
        "100": "--c-util-green-100",
        "300": "--c-util-green-300",
        "500": "--c-util-green-500",
        "700": "--c-util-green-700",
        "900": "--c-util-green-900",
        "baseHue": "--c-util-green-base-hue",
        "baseSat": "--c-util-green-base-sat",
      },
      "utilityRed": Object {
        "100": "--c-util-red-100",
        "300": "--c-util-red-300",
        "500": "--c-util-red-500",
        "700": "--c-util-red-700",
        "900": "--c-util-red-900",
        "baseHue": "--c-util-red-base-hue",
        "baseSat": "--c-util-red-base-sat",
      },
      "utilityYellow": Object {
        "100": "--c-util-yellow-100",
        "300": "--c-util-yellow-300",
        "500": "--c-util-yellow-500",
        "700": "--c-util-yellow-700",
        "900": "--c-util-yellow-900",
        "baseHue": "--c-util-yellow-base-hue",
        "baseSat": "--c-util-yellow-base-sat",
      },
    },
  },
}
`;

exports[`colors utilities getCSSVarNamesForColors should generate CSS statement to access Colors CSS vars 1`] = `
Object {
  "colorIntents": Object {
    "accessibilityColor": "var(--ci-accessibility-color)",
    "background0": "var(--ci-background0)",
    "background1": "var(--ci-background1)",
    "background2": "var(--ci-background2)",
    "backgroundDisabled": "var(--ci-background-disabled)",
    "current": "var(--ci-current)",
    "dangerAction": "var(--ci-danger-action)",
    "dangerBackground": "var(--ci-danger-background)",
    "dangerText": "var(--ci-danger-text)",
    "disabledText": "var(--ci-disabled-text)",
    "disabledTextReversed": "var(--ci-disabled-text-reversed)",
    "primary": "var(--ci-prim)",
    "primaryReversed": "var(--ci-prim-reversed)",
    "primaryText": "var(--ci-prim-text)",
    "primaryTextReversed": "var(--ci-prim-text-reversed)",
    "secondary": "var(--ci-sec)",
    "secondaryReversed": "var(--ci-sec-reversed)",
    "secondaryText": "var(--ci-sec-text)",
    "secondaryTextReversed": "var(--ci-sec-text-reversed)",
    "successAction": "var(--ci-success-action)",
    "successBackground": "var(--ci-success-background)",
    "successText": "var(--ci-success-text)",
    "tertiaryText": "var(--ci-ter-text)",
    "tertiaryTextReversed": "var(--ci-ter-text-reversed)",
    "transparent": "var(--ci-transparent)",
    "warningAction": "var(--ci-warning-action)",
    "warningBackground": "var(--ci-warning-background)",
    "warningText": "var(--ci-warning-text)",
  },
  "colors": Object {
    "accent1": Object {
      "100": "var(--c-acc1-100)",
      "300": "var(--c-acc1-300)",
      "500": "var(--c-acc1-500)",
      "700": "var(--c-acc1-700)",
      "900": "var(--c-acc1-900)",
      "baseHue": "var(--c-acc1-base-hue)",
      "baseSat": "var(--c-acc1-base-sat)",
    },
    "accent2": Object {
      "100": "var(--c-acc2-100)",
      "300": "var(--c-acc2-300)",
      "500": "var(--c-acc2-500)",
      "700": "var(--c-acc2-700)",
      "900": "var(--c-acc2-900)",
      "baseHue": "var(--c-acc2-base-hue)",
      "baseSat": "var(--c-acc2-base-sat)",
    },
    "accent3": Object {
      "100": "var(--c-acc3-100)",
      "300": "var(--c-acc3-300)",
      "500": "var(--c-acc3-500)",
      "700": "var(--c-acc3-700)",
      "900": "var(--c-acc3-900)",
      "baseHue": "var(--c-acc3-base-hue)",
      "baseSat": "var(--c-acc3-base-sat)",
    },
    "current": "var(--c-current)",
    "effectTransparentHeavy": "var(--c-effect-transparent-heavy)",
    "effectTransparentLight": "var(--c-effect-transparent-light)",
    "effectTransparentMedium": "var(--c-effect-transparent-medium)",
    "grey": Object {
      "0": "var(--c-grey-0)",
      "0-reversed": "var(--c-grey-0-reversed)",
      "100": "var(--c-grey-100)",
      "100-reversed": "var(--c-grey-100-reversed)",
      "1000": "var(--c-grey-1000)",
      "200": "var(--c-grey-200)",
      "200-reversed": "var(--c-grey-200-reversed)",
      "25": "var(--c-grey-25)",
      "300": "var(--c-grey-300)",
      "400": "var(--c-grey-400)",
      "50": "var(--c-grey-50)",
      "500": "var(--c-grey-500)",
      "600": "var(--c-grey-600)",
      "700": "var(--c-grey-700)",
      "800": "var(--c-grey-800)",
      "900": "var(--c-grey-900)",
      "baseHue": "var(--c-grey-base-hue)",
      "baseSat": "var(--c-grey-base-sat)",
    },
    "primary": Object {
      "100": "var(--c-prim-100)",
      "300": "var(--c-prim-300)",
      "500": "var(--c-prim-500)",
      "700": "var(--c-prim-700)",
      "900": "var(--c-prim-900)",
      "baseHue": "var(--c-prim-base-hue)",
      "baseSat": "var(--c-prim-base-sat)",
    },
    "transparent": "var(--c-transparent)",
    "utilityGreen": Object {
      "100": "var(--c-util-green-100)",
      "300": "var(--c-util-green-300)",
      "500": "var(--c-util-green-500)",
      "700": "var(--c-util-green-700)",
      "900": "var(--c-util-green-900)",
      "baseHue": "var(--c-util-green-base-hue)",
      "baseSat": "var(--c-util-green-base-sat)",
    },
    "utilityRed": Object {
      "100": "var(--c-util-red-100)",
      "300": "var(--c-util-red-300)",
      "500": "var(--c-util-red-500)",
      "700": "var(--c-util-red-700)",
      "900": "var(--c-util-red-900)",
      "baseHue": "var(--c-util-red-base-hue)",
      "baseSat": "var(--c-util-red-base-sat)",
    },
    "utilityYellow": Object {
      "100": "var(--c-util-yellow-100)",
      "300": "var(--c-util-yellow-300)",
      "500": "var(--c-util-yellow-500)",
      "700": "var(--c-util-yellow-700)",
      "900": "var(--c-util-yellow-900)",
      "baseHue": "var(--c-util-yellow-base-hue)",
      "baseSat": "var(--c-util-yellow-base-sat)",
    },
  },
}
`;

exports[`colors utilities getCSSVarNamesForColors should generate CSS variable names for a given Colors object 1`] = `
Object {
  "colorIntents": Object {
    "accessibilityColor": "--ci-accessibility-color",
    "background0": "--ci-background0",
    "background1": "--ci-background1",
    "background2": "--ci-background2",
    "backgroundDisabled": "--ci-background-disabled",
    "current": "--ci-current",
    "dangerAction": "--ci-danger-action",
    "dangerBackground": "--ci-danger-background",
    "dangerText": "--ci-danger-text",
    "disabledText": "--ci-disabled-text",
    "disabledTextReversed": "--ci-disabled-text-reversed",
    "primary": "--ci-prim",
    "primaryReversed": "--ci-prim-reversed",
    "primaryText": "--ci-prim-text",
    "primaryTextReversed": "--ci-prim-text-reversed",
    "secondary": "--ci-sec",
    "secondaryReversed": "--ci-sec-reversed",
    "secondaryText": "--ci-sec-text",
    "secondaryTextReversed": "--ci-sec-text-reversed",
    "successAction": "--ci-success-action",
    "successBackground": "--ci-success-background",
    "successText": "--ci-success-text",
    "tertiaryText": "--ci-ter-text",
    "tertiaryTextReversed": "--ci-ter-text-reversed",
    "transparent": "--ci-transparent",
    "warningAction": "--ci-warning-action",
    "warningBackground": "--ci-warning-background",
    "warningText": "--ci-warning-text",
  },
  "colors": Object {
    "accent1": Object {
      "100": "--c-acc1-100",
      "300": "--c-acc1-300",
      "500": "--c-acc1-500",
      "700": "--c-acc1-700",
      "900": "--c-acc1-900",
      "baseHue": "--c-acc1-base-hue",
      "baseSat": "--c-acc1-base-sat",
    },
    "accent2": Object {
      "100": "--c-acc2-100",
      "300": "--c-acc2-300",
      "500": "--c-acc2-500",
      "700": "--c-acc2-700",
      "900": "--c-acc2-900",
      "baseHue": "--c-acc2-base-hue",
      "baseSat": "--c-acc2-base-sat",
    },
    "accent3": Object {
      "100": "--c-acc3-100",
      "300": "--c-acc3-300",
      "500": "--c-acc3-500",
      "700": "--c-acc3-700",
      "900": "--c-acc3-900",
      "baseHue": "--c-acc3-base-hue",
      "baseSat": "--c-acc3-base-sat",
    },
    "current": "--c-current",
    "effectTransparentHeavy": "--c-effect-transparent-heavy",
    "effectTransparentLight": "--c-effect-transparent-light",
    "effectTransparentMedium": "--c-effect-transparent-medium",
    "grey": Object {
      "0": "--c-grey-0",
      "0-reversed": "--c-grey-0-reversed",
      "100": "--c-grey-100",
      "100-reversed": "--c-grey-100-reversed",
      "1000": "--c-grey-1000",
      "200": "--c-grey-200",
      "200-reversed": "--c-grey-200-reversed",
      "25": "--c-grey-25",
      "300": "--c-grey-300",
      "400": "--c-grey-400",
      "50": "--c-grey-50",
      "500": "--c-grey-500",
      "600": "--c-grey-600",
      "700": "--c-grey-700",
      "800": "--c-grey-800",
      "900": "--c-grey-900",
      "baseHue": "--c-grey-base-hue",
      "baseSat": "--c-grey-base-sat",
    },
    "primary": Object {
      "100": "--c-prim-100",
      "300": "--c-prim-300",
      "500": "--c-prim-500",
      "700": "--c-prim-700",
      "900": "--c-prim-900",
      "baseHue": "--c-prim-base-hue",
      "baseSat": "--c-prim-base-sat",
    },
    "transparent": "--c-transparent",
    "utilityGreen": Object {
      "100": "--c-util-green-100",
      "300": "--c-util-green-300",
      "500": "--c-util-green-500",
      "700": "--c-util-green-700",
      "900": "--c-util-green-900",
      "baseHue": "--c-util-green-base-hue",
      "baseSat": "--c-util-green-base-sat",
    },
    "utilityRed": Object {
      "100": "--c-util-red-100",
      "300": "--c-util-red-300",
      "500": "--c-util-red-500",
      "700": "--c-util-red-700",
      "900": "--c-util-red-900",
      "baseHue": "--c-util-red-base-hue",
      "baseSat": "--c-util-red-base-sat",
    },
    "utilityYellow": Object {
      "100": "--c-util-yellow-100",
      "300": "--c-util-yellow-300",
      "500": "--c-util-yellow-500",
      "700": "--c-util-yellow-700",
      "900": "--c-util-yellow-900",
      "baseHue": "--c-util-yellow-base-hue",
      "baseSat": "--c-util-yellow-base-sat",
    },
  },
}
`;
